<resources>
    <string name="app_name">CaCom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="user_register">user register</string>
    <string name="action_settings">setting</string>
    <string name="deposits_withdrawals">deposits withdrawals history</string>
    <string name="wait">wait</string>
    <string name="account_register">acount register</string>
    <string name="account_monthly">account monthly</string>
    <string name="kind">kind</string>
    <string name="login_mail_hint">E-mail</string>
    <string name="login_user_name_hint">user name</string>
    <string name="plus_calc_number">price</string>
    <string name="change_pre_pass">now password</string>
    <string name="change_new_pass">new password</string>
    <string name="login_pass_hint">password</string>
    <string name="login_pass_confirm_hint">passwrd confirm</string>
    <string name="login_button">login</string>
    <string name="login_register_button">register</string>
    <string name="register_user_name">user name</string>
    <string name="input">input</string>
    <string name="output">output</string>
    <string name="move">振替</string>
    <string name="detail">detail</string>
    <string name="other_about">about</string>
    <string name="other_fag">FAQ</string>
    <string name="other_pass_code">set passcode</string>
    <string name="other_push">push</string>
    <string name="other_mail_address_change">change E-mail</string>
    <string name="other_password_change">change password</string>
    <string name="other_forget_password">password reissue</string>
    <string name="other_quit">quit</string>
    <string name="category">category</string>
    <string name="other_term">term</string>
    <string name="other_version">version</string>
    <string name="other_logout">logout</string>
    <string name="other">other</string>
    <string name="update">update</string>
    <string name="send">send</string>
    <string name="setting">setting</string>
    <string name="account_trust">account trust</string>
    <string name="account_credit">credit</string>
    <string name="account_other">other</string>
    <string name="transfer_source">trancefer source</string>
    <string name="transfer_destination">transfer destination</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nifty_api_key">851d7db3428e46b661a1d6ffc632708712bc098b198a6d194bd7a8e336c8feda</string>
    <string name="nifty_client_key">dc312e991ba8ba9480dde8b983f39498438748eab942d6cfa055864c0b9265b4</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="account">account</string>
    <string name="account_bank">bank</string>
    <string name="account_break_down">account break down</string>
    <string name="account_history">account history</string>
    <string name="account_securities">securities</string>

</resources>
