<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".View.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/content_margin"
            android:textSize="24sp"
            android:text="@string/login_button"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_mail_text_input"
            android:layout_margin="@dimen/content_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_mail_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/login_user_name_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/content_margin"
            android:id="@+id/login_pass_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_pass_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/login_pass_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:text="@string/login_button"
            android:layout_gravity="center" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:text="@string/login_register_button"
            android:layout_gravity="center" />
    </LinearLayout>


</FrameLayout>
