<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="monepla.co.jp.cacom.View.AccountPlusFragment">
    <LinearLayout
        android:layout_margin="@dimen/content_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/content_margin"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/plus_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="24sp"
                android:ems="10"
                android:hint="@string/account_register"
                android:enabled="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/content_margin"
            android:layout_width="match_parent"
            android:layout_height="64dp">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plus_account_div"
            android:hint="@string/kind"
            android:gravity="end"
            android:textSize="24sp"
            android:focusable="false"
            android:ems="10"
            android:layout_gravity="center"/>
        </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:text="@string/login_register_button"
            android:layout_gravity="center"/>
    </LinearLayout>

</FrameLayout>
